--- a/package.json
+++ b/package.json
@@ -5,18 +5,14 @@
   "main": "generateCards.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon expressClient.js 8124 --signal SIGINT"
+    "start": "nodemon expressServer.js 8124 --signal SIGINT"
   },
   "author": "mason ashlock",
   "license": "ISC",
   "dependencies": {
     "canvas": "^2.10.1",
-    "connect-livereload": "^0.6.1",
     "express": "^4.18.1",
-    "livereload": "^0.9.3",
-    "livereload-express": "^1.0.3",
     "lorem": "^0.4.0",
-    "open": "^8.4.0",
     "ws": "^7.4.6"
   }
 }
