--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "canvas": "^2.10.1",
+    "csv-reader": "^1.0.9",
     "express": "^4.18.1",
+    "fast-csv": "^4.3.6",
     "lorem": "^0.4.0",
     "ws": "^7.4.6"
   }
