--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "canvas": "^2.10.1",
+    "cors": "^2.8.5",
     "csv-reader": "^1.0.9",
     "express": "^4.18.1",
     "fast-csv": "^4.3.6",
