--- a/generators/cardGen-angular/package.json
+++ b/generators/cardGen-angular/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "html-to-image": "^1.11.11",
     "octokit": "^2.0.14",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
