--- a/generators/cardGen-angular/package.json
+++ b/generators/cardGen-angular/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1",
     "octokit": "^2.0.14",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
